--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@sveltejs/svelte-virtual-list": "^3.0.1",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.3.0",
+    "esm-env": "^1.0.0",
     "json-beautify": "^1.1.1",
     "json-bigint": "^1.0.0",
     "just-debounce": "^1.1.0",
